# federated-learning

./: README.md  plot_curves.py  plot_results-5.py  plot_results.py  plot_results_alt.py  plot_results_best.py  plot_results_mit_idd.py  pyproject.toml  requirements.txt  splits_dirichlet_10_a03.json
data/: norm_stats.json
data/no_val/: diabetes_old.parquet  norm_stats_old.json
federated_learning/: __init__.py  client_app.py  more_screening_plots.py  plot_mu_hist_and_middle.py  run_experiments.sh  screening_policy.py  serverAppCOPY.py  server_app.py  server_app_blaaaaa.py  server_app_centralizedEval.py  task.py
federated_learning/mnt/: plot_mu_report.py  run_mu_sweep.sh  sweep_mu.py  write_metrics_helper.py
federated_learning/plotting/: compare_thresholds_report.py  plot_centralized_roc.py  run_a01_thr035.sh  run_experiments.sh  run_threshold_alpha_grid.py
federated_learning/tools/: final_test_evaluation_with_val_threshold.py  make_splits.py  prepare_data.py
logs-threshold/: parse_flwr_logs.py
plots_out_03/: aggregates_by_alpha_threshold.csv  all_runs_flat.csv
plots_out_03_test1/: aggregates_by_alpha_threshold.csv  all_runs_flat.csv
plots_out_03_test2/: aggregates_by_alpha_threshold.csv  all_runs_flat.csv
quatsch_leider/logs/: parse_flwr_logs.py
quatsch_leider/result/idd/thr_0.35/: run_1.json  (+9 more)
quatsch_leider/results/: screening_best_round.json
quatsch_leider/results/plots_out_dirchletundso/: all_runs_flat.csv
quatsch_leider/results/plots_out_mit_idd/: aggregates_by_alpha_threshold.csv
quatsch_leider/results/plots_out_mähhh/: aggregates_by_alpha_threshold.csv  all_runs_flat.csv
quatsch_leider/results/plots_out_nur_dir/: all_runs_flat.csv
result/alpha03/multi_thr/: run_1.json
result/alpha03/thr_0.3/: run_1.json  run_2.json  run_3.json  run_4.json  run_5.json
result/alpha03/thr_0.323/: run_1.json  run_2.json  run_3.json  run_4.json  run_5.json
result/alpha03/thr_0.35/: run_1.json  run_2.json  run_3.json  run_4.json  run_5.json
result/alpha03/thr_0.42/: run_1.json  run_2.json  run_3.json  run_4.json  run_5.json
result/alpha03/thr_0.5/: run_1.json  run_2.json  run_3.json  run_4.json  run_5.json
result/alpha03/thr_adaptive/: run_1.json
result_test_1/alpha03/: comments.txt
result_test_1/alpha03/thr_0.35/: run_1.json  run_10.json  run_2.json  run_3.json  run_4.json  run_5.json  run_6.json  run_7.json  run_8.json  run_9.json
result_test_1/alpha03/thr_0.42/: run_1.json  run_10.json  run_2.json  run_3.json  run_4.json  run_5.json  run_6.json  run_7.json  run_8.json  run_9.json
result_test_1/alpha03/thr_0.5/: run_1.json  run_10.json  run_2.json  run_3.json  run_4.json  run_5.json  run_6.json  run_7.json  run_8.json  run_9.json
result_test_2/: toml_comment.txt
result_test_2/alpha03/thr_0.35/: run_1.json  run_10.json  run_2.json  run_3.json  run_4.json  run_5.json  run_6.json  run_7.json  run_8.json  run_9.json
result_test_2/alpha03/thr_0.42/: run_1.json  run_10.json  run_2.json  run_3.json  run_4.json  run_5.json  run_6.json  run_7.json  run_8.json  run_9.json
result_test_2/alpha03/thr_0.5/: run_1.json  run_10.json  run_2.json  run_3.json  run_4.json  run_5.json  run_6.json  run_7.json  run_8.json  run_9.json
result_test_3/: comment_toml.txt
result_test_3/alpha03/thr_0.3/: run_1.json  run_2.json  run_3.json
result_test_3/alpha03/thr_0.35/: run_1.json  run_2.json  run_3.json
result_test_3/alpha03/thr_0.4/: run_1.json  run_2.json
result_test_3/alpha03/thr_0.5/: run_1.json  run_2.json  run_3.json
results/mu=0/: run_config.json
results/mu=0.0/: run_config.json
results/mu=0.0001/: run_config.json
results/mu=0.001/: run_config.json
results/mu=0.005/: run_config.json
results/mu=0.01/: run_config.json
results/mu=1e-2/: run_config.json
results/mu=1e-3/: run_config.json
results/mu=1e-4/: run_config.json
results/mu=5e-3/: run_config.json
split_no_val/: splits_dirichlet_10.json  splits_dirichlet_100.json  splits_dirichlet_10_a01.json  splits_dirichlet_10_a10.json  splits_iid_10.json
(+110 files in other folders)
