# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federated-learning"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.20.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "pandas",
    "pyarrow",
    "scikit-learn",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "ginasixt"

# Point to your ServerApp and ClientApp objects
# Format: "<module>:<object>"
[tool.flwr.app.components]
serverapp = "federated_learning.server_app:app"
clientapp = "federated_learning.client_app:app"


# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
# Server
num-server-rounds = 5
fraction-fit = 0.2
fraction-evaluate = 1.0
min-fit-clients = 2
min-evaluate-clients = 2
local-epochs = 1

# Datenpfade
dataset-path = "data/diabetes.csv"
prepared-parquet = "data/diabetes.parquet"
norm-stats-json = "data/norm_stats.json"
split-path = "splits_dirichlet_10.json"

# Client
batch-size = 128


# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
