# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federated-learning"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.20.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "pandas",
    "pyarrow",
    "scikit-learn",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "ginasixt"

# Point to your ServerApp and ClientApp objects
# Format: "<module>:<object>"
[tool.flwr.app.components]
serverapp = "federated_learning.server_app:app"
clientapp = "federated_learning.client_app:app"


# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
# Server
num-server-rounds = 20
fraction-fit = 0.8 # 80% der Clients pro Runde
fraction-evaluate = 1.0
min-fit-clients = 8
min-evaluate-clients = 9
local-epochs = 1

# Datenpfade
dataset-path = "data/diabetes.csv"
prepared-parquet = "data/diabetes.parquet"
norm-stats-json = "data/norm_stats.json"
split-path = "splits_dirichlet_10_a03.json"

# Client
batch-size = 128
mu = 1e-4
lr = 1e-2
lr-after = 5e-3
weight-decay = 1e-5
pos-weight-boost = 1.5  # Test: 1.5, 2.0, 2.5, 3.0
clip-grad-norm = 5.0
eval-threshold = 0.35
run-tag = 1

# Loss
use-focal-loss = false
focal-gamma = 1.0 

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
